<resources>
    <string name="app_name">Rick&amp;Morty Archive</string>

    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>

    <string name="error_paging">Loading error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    
    <string name="character_last_location">Last known location:</string>
    <string name="character_status_title">Status:</string>
    <string name="character_species_title">Species:</string>
    <string name="character_type_title">Type:</string>
    <string name="character_gender_title">Gender:</string>
    <string name="character_origin_title">Origin:</string>
    <string name="character_location_title">Current location:</string>
    <string name="character_first_seen_title">First seen in:</string>
    <string name="character_episodes_title">Other episodes:</string>
</resources>