<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_padding"
        android:paddingBottom="@dimen/huge_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/default_padding">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold"
                tools:text="Dr. Wong" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_avatar"
                android:layout_width="@dimen/character_avatar_size"
                android:layout_height="@dimen/character_avatar_size"
                android:padding="1dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize50Percent"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="2dp"
                tools:srcCompat="@drawable/character_preview" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/character_status_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                tools:text="Status" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="Alive" />

            <TextView
                android:id="@+id/tv_species_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/character_species_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_type_title"
                tools:text="Species:" />

            <TextView
                android:id="@+id/tv_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="Humanoid" />

            <TextView
                android:id="@+id/tv_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/character_type_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                tools:text="Type:" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="none" />

            <TextView
                android:id="@+id/tv_gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/character_gender_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                tools:text="Gender:" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                tools:text="Female" />

            <TextView
                android:id="@+id/tv_origin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/character_origin_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                tools:text="Origin:" />

            <TextView
                android:id="@+id/tv_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="Earth (Replacement Dimension)" />

            <TextView
                android:id="@+id/tv_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/character_location_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                tools:text="Current location:" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="Earth (Replacement Dimension)" />

            <TextView
                android:id="@+id/tv_first_seen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/character_first_seen_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                tools:text="First seen in:" />

            <TextView
                android:id="@+id/tv_first_seen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="Pickle Rick" />

            <TextView
                android:id="@+id/tv_episodes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/character_episodes_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                tools:text="Other episodes:" />

            <TextView
                android:id="@+id/tv_episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="Star Mort: Rickturn of the Jerri" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>